--- a/eli-forms.css
+++ b/eli-forms.css
@@ -7,11 +7,13 @@
 }
 
 /* TAB */
-ul.tabs { padding:0px; display: grid; grid-auto-flow: column; list-style: none; }
+ul.tabs { padding:0px; display: grid; grid-auto-flow: column; list-style: none; background:rgba(0,0,0,0.05); grid-gap:.1em; border-radius:var(--radius); }
+ul.tabs.vertical { grid-auto-flow:row; }
 .tab-content { display: none; }
 .tab-content.active { display:block; }
 .tabs .disabled { cursor: none; pointer-events: none; opacity:0.4; }
-.tabs li.active { color: var(--btn-color); }
+.tabs li { text-align:center; display:block; padding:.5em 1em;}
+.tabs li.active { color: var(--btn-color);  }
 
 /* Form */
 form { display:grid; grid-gap:.5em; align-content: start; }
@@ -191,7 +193,9 @@ label.radio-field input[type=radio]:checked:before {
 /* Input Required */
 /*input[required],select[required],textarea[required] + label::after { content:"*"; color:red; position:absolute; right:-.5em; margin-left:1em; }*/
 
-.input-field i:first-child { color:rgba(0,0,255,.3); }
+.input-field i:first-child { color:var(--input-border-color); opacity:.7; }
+.input-field:hover i:first-child { opacity:1; }
+
 .truncate { width:100%;  white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
 /* Editable */
@@ -222,7 +226,8 @@ input.editable[readonly]:hover { background:rgba(0,0,0,.04); }
 
 
 /*  Btn */
-.btn,button,input[type=submit],input[type=reset],input[type=button] { display: grid; align-items:center; align-self:start; justify-self:start; text-align: center; cursor: pointer; background-color:var(--btn-color); color:rgba(255,255,255,.9); font-weight:400; font-size:1em; padding:.5em 1em; border:none; border-radius:var(--radius); text-transform: capitalize; transition:.5s all; position: relative; overflow: hidden; margin:var(--margin); grid-auto-flow:column; grid-gap:.5em; }
+.btn,button,input[type=submit],input[type=reset],input[type=button] { display: grid; align-items:center; text-align: center; cursor: pointer; background-color:var(--btn-color); color:rgba(255,255,255,.9); font-weight:400; font-size:1em; padding:.5em 1em; border:none; border-radius:var(--radius); text-transform: capitalize; transition:.5s all; position: relative; overflow: hidden; margin:var(--margin); grid-auto-flow:column; grid-gap:.5em; width: -moz-available;
+height:auto; }
 .btn.small { padding:.5em 1em; font-size:.85em; align-self:center; justify-self:center;  }
 .btn.med { padding:.5em 1em; font-size:1em; align-self:center; justify-self:center;  }
 .btn.big { padding:.7em 1.2em; font-size:1.2em; align-self:center; justify-self:center;  }
