--- a/eli-helpers.css
+++ b/eli-helpers.css
@@ -534,6 +534,9 @@ body { padding:0px; margin:0px auto; line-height:1.5; font-size:1rem;  }
 .pad-b-19 { padding-bottom:9.5em!important; }
 .pad-b-20 { padding-bottom:10em!important; }
 
+/* General Pad */
+.pad { padding:.5em .7em; }
+.pad-s { padding:.25em .35em; }
 
 /* Line-Height */
 
@@ -560,6 +563,7 @@ body { padding:0px; margin:0px auto; line-height:1.5; font-size:1rem;  }
 .lh-20 { line-height:10em!important; }
 
 /* Text Size */
+.tsize-auto { font-size:inherit; }
 
 .tsize-s1 { font-size:0.5em!important; }
 .tsize-s2 { font-size:0.6em!important; }
@@ -708,6 +712,12 @@ body { padding:0px; margin:0px auto; line-height:1.5; font-size:1rem;  }
 .container-1,.container-m { width:80%; margin:0 auto;   }
 .container-2,.container-l { width:90%; margin:0 auto;  }
 .container-3,.container-full { width:100vw; margin:0 auto;  }
+
+@media (max-width:800px){
+    .container,.container-1,.container-m { width:90%; }
+    .container-2,.container-l { width:95%; }
+}
+
 
 /* Widths */
 
