--- a/eli.css
+++ b/eli.css
@@ -6,4 +6,4 @@
 @import "eli-carousel.css";
 @import "mdi/css/animate.css";
 @import "mdi/css/materialdesignicons.min.css";
-@import "swal/sweetalert2.min.css";
+@import "sweetalert2.min.css";
