--- a/eli-grid.css
+++ b/eli-grid.css
@@ -56,7 +56,7 @@ audio:not([controls]) {
  * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
  */
 
-[hidden], template {
+[hidden], template,[template] {
   display: none;
 }
 
@@ -167,7 +167,7 @@ nav.sidebar  a:hover { background-color:rgba(0,0,0,.05); }
 
 @media (max-width:800px) {
   header { position:relative; }
-  header::after { content:"\f35c"; font-family: "Material Design Icons"; color:inherit; cursor:pointer; font-size:2em; justify-self: end;}
+  header::after { content:"\f035c"; font-family: "Material Design Icons"; color:inherit; cursor:pointer; font-size:2em; justify-self: end;}
   header nav { display:none; grid-auto-flow:row; }
   header .brand {  justify-self:left; }
   .ha1 { grid-template-columns:1fr auto; justify-items:start; }
@@ -179,7 +179,7 @@ nav.sidebar  a:hover { background-color:rgba(0,0,0,.05); }
   .h1r1a .brand,.h1r1 .brand {  grid-column:unset; justify-self:left; }
 
   nav.active:not(.social) { animation:slideInDown 1s; z-index:3; position:fixed; width:100vw; height:100%; top:0; left:0; right:0; bottom:0; display:grid; background:rgba(0,0,0,.9); color:rgba(255,255,255,.7); align-items:center; align-content: center; justify-content:center; font-size:2rem; overflow:hidden; overflow-y:auto; }
-  nav.active:not(.social)::before { position:fixed; top:.5em; right:.5em; content:"\f5ad"; font-family: "Material Design Icons"; color:inherit; cursor:pointer; font-size:1.5em; justify-self: end; color:rgba(255,0,0,.8); text-shadow:1px 1px 3px rgba(0,0,0,.3); }
+  nav.active:not(.social)::before { position:fixed; top:.5em; right:.5em; content:"\f05ad"; font-family: "Material Design Icons"; color:inherit; cursor:pointer; font-size:1.5em; justify-self: end; color:rgba(255,0,0,.8); text-shadow:1px 1px 3px rgba(0,0,0,.3); }
 
 }
 
