--- a/eli-grid.css
+++ b/eli-grid.css
@@ -60,12 +60,11 @@ audio:not([controls]) {
   display: none;
 }
 
-
 /* = Loading =  */
 body.loading > * { display:none; }
 body.loading::after {  content:""; 
   background-image: linear-gradient(33deg, rgba(134,134,134,1) 0%, rgba(255,255,255,1) 22%, rgba(140,137,137,1) 100%);
-  animation:loadingpage 1s infinite;  transition:1s all ease-in-out; margin:0 auto; display: grid; background-size:100%; justify-content:center; align-items: center;
+  animation:loadingpage 1s infinite ease-in-out;  transition:1s all ease-in-out; margin:0 auto; display: grid; background-size:100%; justify-content:center; align-items: center;
   color:rgba(0,0,0,.7); position:fixed; top:0; left:0; right:0; bottom:0; z-index:99; width:100%; height:100%; 
 }
 
